--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
 </head>
 <body>
   <div class="container1">
-            <div class="box3"><a href="#About">About</a></div>
-            <div class="box3"><a href="#Services">Projects</a></div>
-            <div class="box3"><a href="#Contact">Contact</a></div>
+            <div class="box3"><a href="https://meghultyagi.github.io/About/">About</a></div>
+            <div class="box3"><a href="https://meghultyagi.github.io/Projects/">Projects</a></div>
+            <div class="box3"><a href="https://meghultyagi.github.io/Contacts/">Contact</a></div>
             <br><br>
   </div>
   <div class="container2">
@@ -152,6 +152,7 @@
                     <p class="box4">Approximately 4-5 hours.</p>
                 </div>
       </div>
+
 
 </body>
 </html>
