--- a/index.html
+++ b/index.html
@@ -12,7 +12,171 @@
       border: 1px solid #dddddd;
       text-align: left;
       padding: 8px;
-    }
+    }<!DOCTYPE html>
+<html>
+<title>Projects</title>
+<head><meta name="viewport" content="width=device-width,initial-scale=1.0">
+<style>
+table, td, th
+  {
+  border: 1px solid rgb(17, 16, 16);
+  border-collapse: collapse;
+  background-color:rgb(214, 214, 194,0.6);
+  color: black;
+  }
+tr{
+    width:80%;
+    height:40px;
+}
+td{
+  width:20%;
+  font-size:22px;
+}
+
+.center {
+  margin-right:100px;
+  margin-left: 30px;
+}
+  body
+      {
+        background-image: url(https://images.unsplash.com/photo-1506784693919-ef06d93c28d2?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80);
+        background-repeat: no-repeat;
+        background-size:150%;
+      }
+      a:link {
+        color: beige;
+        background-color: transparent;
+        text-decoration: none;
+      }
+      a:visited {
+        color: pink;
+        background-color: transparent;
+        text-decoration: none;
+      }
+      a:hover {
+        color: yellow;
+        background-color: transparent;
+        text-decoration: underline;
+      }
+      a:active {
+        color: green;
+        background-color: transparent;
+        text-decoration: underline;
+      }
+      .container1
+      {
+        width:50%;
+      	display:flex;
+      	text-align:center;
+        justify-content: space-between;
+        height:55px;
+        font-size: 20px;
+      }
+      .box3
+      {
+        width:30%;
+        text-align:center;
+        padding: 30px;
+        font-size:25px;
+      }
+      .side
+      {
+        font-size:30px;
+        padding-left: 30px;
+      }
+
+</style>
+</head>
+<body>
+  <div class="container1">
+            <div class="box3"><a href="https://meghultyagi.github.io/About/">About</a></div>
+            <div class="box3"><a href="https://meghultyagi.github.io/Projects/">Projects</a></div>
+            <div class="box3"><a href="https://meghultyagi.github.io/Contacts/">Contact</a></div>
+
+  </div>
+  <br><br><br>
+  <div class="side">
+  <a href="https://meghultyagi.github.io/day2/">Mastering Style with CSS- Day 2</a>
+        </div>
+
+        <br>
+          <table class="center">
+            <tr>
+              <td>Description</td>
+              <td>Used HTML and CSS to create a webpage </td>
+            </tr>
+            <tr>
+              <td>Technologies Used</td>
+              <td>HTML, CSS </td>
+            </tr>
+            <tr>
+              <td>Time Taken</td>
+              <td>3 hours</td>
+            </tr>
+          </table>
+<br>
+<div class="side">
+  <a href="https://meghultyagi.github.io/day3/">Positioning 101 using Flexbox- Day 3</a>
+</div>
+
+        <br>
+        <table class="center">
+            <tr>
+              <td>Description</td>
+              <td>Flexbox Froggy Game and Made a Custom FlexBox </td>
+            </tr>
+            <tr>
+              <td>Technologies Used</td>
+              <td>HTML , CSS</td>
+            </tr>
+            <tr>
+              <td>Time Taken</td>
+              <td>3 hours</td>
+            </tr>
+           </table>
+           <br>
+           <div class="side">
+            <a href="https://meghultyagi.github.io/day4/">Upskilling with Javascript- Day 4</a>
+          </div>
+          <br>
+           <table class="center">
+            <tr>
+              <td>Description</td>
+              <td>Created a calculator to split the given amount in given number of people</td>
+            </tr>
+            <tr>
+              <td>Technologies Used</td>
+              <td>HTML, CSS, JS</td>
+            </tr>
+            <tr>
+              <td>Time Taken</td>
+              <td>3 hours</td>
+            </tr>
+          </table>
+          <br>
+          <div class="side">
+            <a href="https://meghultyagi.github.io/day5/">It's Show Time- Week 1</a>
+          </div>
+          <br>
+          <table class="center">
+            <tr>
+              <td>Description</td>
+              <td>Made a website using flexbox and Created my own portfolio and hosted it on Github
+            </td>
+            </tr>
+            <tr>
+              <td>Technologies Used</td>
+              <td>HTML, CSS</td>
+            </tr>
+            <tr>
+              <td>Time Taken</td>
+              <td>9-10 hours</td>
+            </tr>
+          </table>
+
+</body>
+</html>
+
   body
       {
         background-image: url(https://images.unsplash.com/photo-1506784693919-ef06d93c28d2?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80);
