--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <title>Projects</title>
 <head><meta name="viewport" content="width=device-width,initial-scale=1.0">
 <style>
+  * {
+  box-sizing: border-box;
+}
 table, td, th
   {
   border: 1px solid rgb(17, 16, 16);
@@ -26,7 +29,7 @@ td{
   body
       {
         background-image: url(https://images.unsplash.com/photo-1506784693919-ef06d93c28d2?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80);
-        background-repeat: no-repeat;
+        background-repeat: repeat;
         background-size:150%;
       }
       a:link {
